--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -149,6 +149,7 @@ div .button-box{
     margin: 80px 0;
     grid-column: 2/6;
     grid-row: 4/6;
+    margin-top: -50px;
 }
 /*.text {
     /*background-color: #5e654d;
@@ -169,7 +170,7 @@ div .button-box{
     align-self: center;
     padding: 10px 20px 20px 20px;
     justify-content: center;
-    
+    margin-top: -50px;    
 }
 footer  {
     background-color: #284b63;
