--- a/aboutme/personalsite/style/contactus.css
+++ b/aboutme/personalsite/style/contactus.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 <style>
     form {
         /* Center the form on the page */
@@ -10,7 +5,7 @@
         width: 400px;
         /* Form outline */
         padding: 1em;
-        border: 1px solid rgb(156, 151, 151);
+        border: 2px solid rgb(156, 151, 151);
         border-radius: 1em;
         }
 
@@ -28,7 +23,7 @@
         /* Uniform size & alignment */
         display: inline-block;
         width: 90px;
-        text-align: right;
+        text-align: center;
         }
 
     input,
@@ -43,6 +38,7 @@
 
         /* Match form field borders */
         border: 1px solid #999;
+        padding: 8px;
         }
 
     input:focus,
