--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -17,10 +17,10 @@ header {
     align-content: center;
     justify-items: center;
     grid-column: 1/3;
-    grid-row: 1/2;
+    /*grid-row: 1/2;*/
 }  
 #logo_link {
-    display: grid;
+    /*display: grid;*/
     padding-bottom: 5px;
     justify-self: center;
     align-self: center; 
@@ -297,4 +297,7 @@ footer  {
     grid-row: 6/10;
     padding: 15px 30px;
     
+}
+form{
+
 }
