--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -10,31 +10,29 @@ header {
     background-color: #6f7364;
     display: grid;
     grid-template-columns: 150px auto;
+   
 } 
 #content{
     max-width: 1600px;
-    justify-content: center;
+    /*justify-content: center;
     align-content: center;
-    justify-items: center;
+    justify-items: center;*/
     grid-column: 1/3;
-    /*grid-row: 1/2;*/
+    
 }  
 #logo_link {
-    /*display: grid;*/
     padding-bottom: 5px;
     justify-self: center;
     align-self: center; 
-    grid-column: 1/2;
+    
     
 }
 .logo{
     width: 100px;
     grid-column-start: 1/2;
     grid-row: 1/2;
-    place-content: center;
-    /*justify-self: center;
-    align-self: center;*/
-    justify-content: center;
+    display: flex;
+    /*background-color: aquamarine;*/
     
 }
 
@@ -48,7 +46,8 @@ nav a{
 nav {
     display: flex;
     justify-content: space-around;
-     
+    /*grid-column-start: 1/2;
+    grid-row: 1/2;*/ 
 }
  
 h2 {
