--- a/aboutme/personalsite/style/contactus.css
+++ b/aboutme/personalsite/style/contactus.css
@@ -79,4 +79,22 @@
 .moveDown {
     margin-top: 3em;
 }
+.fab {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+    }
+    
+    .fab:hover {
+    opacity: 0.7;
+    }
+    
+    .fa-whatsapp {
+    background: #45bbff;
+    color: white;
+    }
            
