--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-h5{
+h5 h2{
     text-align: right;
     padding-right: 10px;
     color: #c8a415;
@@ -41,7 +41,7 @@ div .position a {
 }
 #hero {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 7fr 1fr;
     grid-template-rows:  1fr 1fr  1fr;
     margin-top: -1px;    
 }
@@ -98,54 +98,67 @@ div .button-box{
 .img{
     width: 250px;
     height: 200px;    
-    border-radius: 1em;
+    border-radius: 0.5em;
 }
 .passport {
     margin: 80px 0;
-    grid-column: 2/3;
-    grid-row: 2/4;
+    grid-column: 1/2;
+    grid-row: 1/3;
 }
 .tickets {
     margin: 80px 0;
-    grid-column: 4/5;
-    grid-row: 2/4;
+    grid-column: 3/4;
+    grid-row: 1/3;
 }
 .cusco {
     margin: 80px 0;
-    grid-column: 6/7;
-    grid-row: 2/4;
+    grid-column: 5/6;
+    grid-row: 1/3;
 }
 .kuelap {
     margin: 80px 0;
-    grid-column: 8/9;
-    grid-row: 2/4;
+    grid-column: 7/8;
+    grid-row: 1/3;
 }
 .Internationals1 {
     margin: 80px 0;
-    grid-column: 2/3;
-    grid-row: 4/6;
+    grid-column: 1/2;
+    grid-row: 3/5;
 }
 .Internationals2 {
     margin: 80px 0;
-    grid-column: 4/5;
-    grid-row: 4/6;
+    grid-column: 3/4;
+    grid-row: 3/5;
 }
 .Internationals3 {
     margin: 80px 0;
-    grid-column: 6/7;
-    grid-row: 4/6;
+    grid-column: 5/6;
+    grid-row: 3/5;
 }
 .Internationals4 {
     margin: 80px 0;
-    grid-column: 8/9;
-    grid-row: 4/6;
+    grid-column: 7/8;
+    grid-row: 3/5;
 }
 
 .local {
     margin: 80px 0;
-    grid-column: 2/6;
-    grid-row: 4/6;
+    grid-column: 1/5;
+    grid-row: 3/5;
     margin-top: -50px;
+}
+.text1 {
+    margin: 80px 0;
+    grid-column: 5/8;
+    grid-row: 3/5;
+    margin-top: -50px;
+    padding: 50px;
+}
+.text1>h2{
+    text-align: center;
+}
+p {
+    text-align: justify;
 }
 .text {
     text-align: center;
@@ -198,9 +211,19 @@ footer  {
     #middle{
         width: 100%;
         flex-direction: column;
-        display: block;
+        /*display: block;*/
     }
-    .passport, .tickets, .cusco, .kuelap, .Internationals1, .Internationals2,             .Internationals3, .Internationals4  {
+    #article{
+        width: 100%;
+        flex-direction: column;
+        /*display: block;*/
+    }
+    .passport, .tickets, .cusco, .kuelap, .Internationals1, .Internationals2, .Internationals3, .Internationals4 /*.local .img1*/ {
+        margin: 50px auto;
+        width: 60%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .transport, .news, .hotels, .service, .local, .img1*/ {
         margin: 50px auto;
         width: 60%;
         grid-template-columns: repeat(1, 1fr);
@@ -208,8 +231,15 @@ footer  {
     img{
         flex-direction: column;
     }
+    .img1{
+        flex-direction: column;
+    }
     footer {
         margin-top: 25px;
+        flex-direction: column;
+    }
+    .text1{
+        flex-direction: column;
     }
 }
 /* international */  
