--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -145,13 +145,13 @@ div .button-box{
     margin: 80px 0;
     grid-column: 1/5;
     grid-row: 3/5;
-    margin-top: -50px;
+    margin-top: 0px;
 }
 .text1 {
     margin: 80px 0;
     grid-column: 5/8;
     grid-row: 3/5;
-    margin-top: -50px;
+    margin-top: 0px;
     padding: 50px;
 }
 .text1>h2{
@@ -211,7 +211,7 @@ footer  {
     #middle{
         width: 100%;
         flex-direction: column;
-        /*display: block;*/
+        display: block;
     }
     #article{
         width: 100%;
@@ -243,7 +243,7 @@ footer  {
     }
 }
 /* international */  
-#article {
+/*#article {
     text-align: center;
     margin-top: 50px;
     display: grid;
@@ -277,4 +277,4 @@ footer  {
     margin: 80px 0;
     grid-column: 8/9;
     grid-row: 2/4;
-}
+}*/
