--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -100,55 +100,58 @@ div .button-box{
     height: 200px;    
     border-radius: 0.5em;
 }
+.img1{
+    border-radius: 0.5em;
+}
 .passport {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 1/2;
     grid-row: 1/3;
 }
 .tickets {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 3/4;
     grid-row: 1/3;
 }
 .cusco {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 5/6;
     grid-row: 1/3;
 }
 .kuelap {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 7/8;
     grid-row: 1/3;
 }
 .Internationals1 {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 1/2;
     grid-row: 3/5;
 }
 .Internationals2 {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 3/4;
     grid-row: 3/5;
 }
 .Internationals3 {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 5/6;
     grid-row: 3/5;
 }
 .Internationals4 {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 7/8;
     grid-row: 3/5;
 }
 
 .local {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 1/5;
     grid-row: 3/5;
     margin-top: 0px;
 }
 .text1 {
-    margin: 80px 0;
+    margin: 100px 0;
     grid-column: 5/8;
     grid-row: 3/5;
     margin-top: 0px;
