--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -183,6 +183,13 @@ footer  {
     justify-content: space-around;
     align-items: center;
 }
+.social>a{
+    color: green;
+}
+.socia>a {
+    background-color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
 
 @media(max-width:700px) {
     header {
