--- a/aboutme/personalsite/style/carrusel.css
+++ b/aboutme/personalsite/style/carrusel.css
@@ -5,7 +5,6 @@
 }
 <style>
   * {box-sizing: border-box}
-
   body {font-family: Verdana, sans-serif; margin:0}
   .mySlides {display: none}
   img {vertical-align: middle;}
@@ -70,14 +69,14 @@
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: rgb(198, 249, 218);
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
   }
     
   .active, .dot:hover {
-    background-color: #717171;
+    background-color: #19b73b;
   }
     
   /* Fading animation */
@@ -95,4 +94,4 @@
     @media only screen and (max-width: 300px) {
       .prev, .next,.text {font-size: 11px}
     }
-  </style>
+</style>
