--- a/aboutme/personalsite/style/carrusel.css
+++ b/aboutme/personalsite/style/carrusel.css
@@ -1,15 +1,11 @@
-/** {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}*/
-/*<style>*/
-  * {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
-    body {font-family: 'Lato', 'Bradley Hand', sans-serif; margin:0}
+    body {
+      font-family: 'Lato', 'Bradley Hand', sans-serif; margin:0
+    }
     .mySlides {display: none}
     img {vertical-align: middle;}
     
@@ -99,4 +95,3 @@
     @media only screen and (max-width: 300px) {
       .prev, .next,.text {font-size: 11px}
     }
-/*</style>*/
