--- a/aboutme/personalsite/style/styles1.css
+++ b/aboutme/personalsite/style/styles1.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+.call {
+    text-align: right;
+
+}
 body{
     width: 100%;
     font-family: 'Lato', 'Bradley Hand', sans-serif;
@@ -106,7 +110,7 @@ div .button-box{
     grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
     margin-top: -70px; 
     grid-gap: 10px;
-    padding: 0 20px 10px 10px;
+    padding: 0 10px 10px 10px;
 }
 .img{
     width: 300px;
@@ -120,6 +124,8 @@ div .button-box{
     margin: 100px 0;
     grid-column: 1/2;
     grid-row: 1/3;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .passport a {
     color: #98C9A3;
@@ -128,6 +134,8 @@ div .button-box{
     margin: 100px 0;
     grid-column: 3/4;
     grid-row: 1/3;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .tickets a {
     color: #98C9A3;
@@ -136,6 +144,8 @@ div .button-box{
     margin: 100px 0;
     grid-column: 5/6;
     grid-row: 1/3;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .cusco a {
     color: #98C9A3;
@@ -144,6 +154,8 @@ div .button-box{
     margin: 100px 0;
     grid-column: 7/8;
     grid-row: 1/3;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .kuelap a {
     color: #98C9A3;
@@ -153,6 +165,8 @@ div .button-box{
     grid-column: 1/2;
     grid-row: 3/5;
     margin-top: -50px;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .Internationals1 a {
     color: #98C9A3;
@@ -162,6 +176,8 @@ div .button-box{
     grid-column: 3/4;
     grid-row: 3/5;
     margin-top: -50px;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .Internationals2 a {
     color: #98C9A3;
@@ -171,6 +187,8 @@ div .button-box{
     grid-column: 5/6;
     grid-row: 3/5;
     margin-top: -50px;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .Internationals3 a {
     color: #98C9A3;
@@ -180,6 +198,8 @@ div .button-box{
     grid-column: 7/8;
     grid-row: 3/5;
     margin-top: -50px;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .Internationals4 a {
     color: #98C9A3;
@@ -190,6 +210,8 @@ div .button-box{
     grid-row: 3/5;
     display: flex;
     margin-top: -50px;
+    border: 1px solid #98C9A3;
+    padding: 10px;
 }
 .text1 {
     margin: 100px 0;
