--- a/aboutme/personalsite/carrusel.css
+++ b/aboutme/personalsite/carrusel.css
@@ -2,11 +2,12 @@
     * {box-sizing: border-box}
     body {font-family: Verdana, sans-serif; margin:0}
     .mySlides {display: none}
-    img {vertical-align: middle;}
+    img {vertical-align: middle;border-radius: 0.5em;}
     
     /* Slideshow container */
     .slideshow-container {
-      max-width: 1000px;
+      max-width: 95%;
+      max-height: 30%;
       position: relative;
       margin: auto;
     }
@@ -51,7 +52,7 @@
     
     /* Number text (1/3 etc) */
     .numbertext {
-      color: #f2f2f2;
+      color: #319a5e;
       font-size: 12px;
       padding: 8px 12px;
       position: absolute;
@@ -71,7 +72,7 @@
     }
     
     .active, .dot:hover {
-      background-color: #717171;
+      background-color: #319a5e;
     }
     
     /* Fading animation */
