--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -108,6 +108,16 @@ div .button-box{
     grid-gap: 10px;
     padding: 0 20px 10px 10px;
 }
+#card {
+    text-align: center;
+    margin-top: 50px;
+    display: flex;
+    /*grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr, 1fr, 1fr;*/
+    margin-top: 0px; 
+    grid-gap: 10px;
+    padding: 0 20px 10px 10px;
+}
 .img{
     width: 300px;
     height: 200px;    
@@ -184,17 +194,42 @@ div .button-box{
 .Internationals4 a {
     color: #98C9A3;
 }
-.local {
+.passport1 {
     margin: 100px 0;
-    grid-column: 1/5;
-    grid-row: 3/5;
-    display: flex;
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.passport1 a {
+    color: #98C9A3;
+}
+.tickets1 {
+    margin: 100px 0;
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+.tickets1 a {
+    color: #98C9A3;
+}
+.cusco1 {
+    margin: 100px 0;
+    grid-column: 5/6;
+    grid-row: 1/3;
+}
+.cusco1 a {
+    color: #98C9A3;
+}
+#local {
+    margin: 100px 0;
+    display: grid;
+    margin: 100px 0;
+    grid-column: 1/2;
+    grid-row: 1/3;
     margin-top: -50px;
 }
 .text1 {
     margin: 100px 0;
     grid-column: 5/8;
-    grid-row: 3/5;
+    grid-row: 1/3;
     margin-top: 0px;
     padding: 50px;
 }
