--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -102,8 +102,8 @@ div .button-box{
     text-align: center;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     margin-top: -70px; 
     grid-gap: 10px;
     padding: 0 20px 10px 10px;
@@ -309,7 +309,7 @@ footer  {
         width: 60%;
         grid-template-columns: repeat(1, 1fr);
     }
-    .transport, .news, .hotels, .service, .local, .img1*/ {
+    .transport, .news, .hotels, .service, .local {
         margin: 50px auto;
         width: 60%;
         grid-template-columns: repeat(1, 1fr);
