--- a/aboutme/personalsite/style/styles.css
+++ b/aboutme/personalsite/style/styles.css
@@ -110,19 +110,17 @@ div .button-box{
     text-align: center;
     margin-top: 50px;
     display: flex;
-    /*grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr, 1fr, 1fr;*/
     margin-top: 0px; 
-    grid-gap: 10px;
-    padding: 0 20px 10px 10px;
+    grid-gap: 50px;
+    padding: 0 20px 20px 20px;
 }
 #local1 {
     text-align: center;
     margin-top: 50px;
-    display: grid;
+    display: flex;
     margin-top: -20px; 
     grid-gap: 20px;
-    padding: 0 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
 }
 .img{
     width: 300px;
@@ -205,6 +203,7 @@ div .button-box{
     margin: 100px 0;
     grid-column: 1/2;
     grid-row: 1/3;
+    
 }
 .passport1 a {
     color: #98C9A3;
@@ -307,7 +306,7 @@ footer  {
         flex-direction: column;
         display: block;
     }
-    #local1 {
+    #local1, #card, #local {
         width: 100%;
         flex-direction: column;
         display: block;
@@ -322,7 +321,7 @@ footer  {
         width: 60%;
         grid-template-columns: repeat(1, 1fr);
     }
-    .transport, .news, .hotels, .service, .local, .img1*/ {
+    .transport, .news, .hotels, .service, .local  {
         margin: 50px auto;
         width: 60%;
         grid-template-columns: repeat(1, 1fr);
@@ -341,39 +340,3 @@ footer  {
         flex-direction: column;
     }
 }
-/* international */  
-/*#article {
-    text-align: center;
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-    margin-top: -70px; 
-    grid-gap: 10px;
-    padding: 0 20px 10px 10px;
-}
- .container>.sidebar {
-    background: #fff;
-    padding: 20px;
-    border: 1px solid #000000;
-}
-.transport {
-    margin: 80px 0;
-    grid-column: 2/3;
-    grid-row: 2/4;
-}
-.news {
-    margin: 80px 0;
-    grid-column: 4/5;
-    grid-row: 2/4;
-}
-.hotels {
-    margin: 80px 0;
-    grid-column: 6/7;
-    grid-row: 2/4;
-}
-.service {
-    margin: 80px 0;
-    grid-column: 8/9;
-    grid-row: 2/4;
-}*/
